cups (1.4.0~svn8773-1) UNRELEASED; urgency=low

  * New upstream release.
    [ Changes listed explicitly here as they are not yet available on
      www.cups.org ]
    1. accept and reject; the accept and reject commands have been
       officially renamed to cupsaccept and cupsreject. The old names are
       still supported via symlinks.
    2. cupsdisable and cupsenable; the cupsdisable command now supports a
       --hold option to stop printing after the current job and the
       cupsenable command now supports a --release option to release
       pending jobs for printing.
    3. cupsfilter; the cupsfilter program now supports filtering of
       already-queued print job files and can also run printer-specific
       filters specified in the PPD file.
    4. cupstestdsc; the cupstestdsc utility has been improved to better
       detect problems with PostScript print files.
    5. cupstestppd; the cupstestppd utility has been improved to test new
       PPD keywords and better detect impossible contraints.
    6. lpadmin; the lpadmin command now supports options to hold and
       release new jobs on a printer or all printers.
    7. lpoptions; the lpoptions command now describes custom options and
       their parameters.
    8. lppasswd; the lppasswd program is no longer installed setuid by
       default.
    9. lpstat; the lpstat command now supports a -H option to show the
       current default server and no longer slows down when a printer is
       specified.
   10. Look-n-feel; the web interface has been given a new look.
   11. PHP support; the "php-cgi" program is used, when available, to
       process PHP pages in the CUPS web interface.
   12. Printer configuration; improvements have been made to the add and
       modify printer pages.
   13. Printer options; the Set Default Options page now provides a
       "query" button that queries the default and installed options from
       the printer.