@@ -42,6 +42,15 @@ all:	$(TARGETS)
 
 
 #
+# Blank targets to satisfy the main Makefile of CUPS ...
+#
+
+libs:
+apihelp:
+framedhelp:
+
+
+#
 # Clean all object files...
 #
 
@@ -62,10 +71,17 @@ depend:
 # Install the filter...
 #
 
-install:	all
+install:	install-data install-headers install-libs install-exec
+
+install-data:
+
+install-exec:	all
 	$(INSTALL_DIR) -m 755 $(SERVERBIN)/filter
 	$(INSTALL_BIN) pdftopdf $(SERVERBIN)/filter
 
+install-headers:
+
+install-libs:
 
 #
 # Uninstall the filter...
